tests/paczka1/fuzzy1/74016262.err
Error in line 1: AZ6RTwj1 S830 59,5
Error in line 10: 82827UrMo6 S988 423,31
Error in line 7: AZ6RTwj1 A46 62,0
Error in line 14: Xs19Siq1 A461 17,7
Error in line 18: Xs19Siq1 S830 39,4
Error in line 25: 5gmHp5hd9R A46 91,53
